Extract loader interface